# tuktuk-management

./: .gitignore  CHANGELOG.md  Makefile  README.md  modules.txt  pyproject.toml  requirements.txt  setup.py
docs/: BALANCE_RECONCILIATION_GUIDE.md  CHANGELOG_GUIDE.md  DAILY_REPORT_STORAGE_IMPLEMENTATION.md  DRIVER_LISTS_IN_DAILY_REPORT.md  DRIVER_TERMINATION_FIX_SUMMARY.md  DRIVER_TERMINATION_PROCESS.md  LEFT_TO_TARGET_FIX_SUMMARY.md  PAYMENT_FIX_SUMMARY.md  RECONCILIATION_BUTTONS_IMPLEMENTATION.md  ROSTER_IMPLEMENTATION_GUIDE.md  SMS_DRIVER_COMMUNICATION_GUIDE.md  SUBSTITUTE_DRIVER_IMPLEMENTATION_SUMMARY.md  TUKTUK_DRIVER_ROLE_FIX.md  Terminated_TukTuk_Driver.md  UNCAPTURED_PAYMENTS_IMPLEMENTATION.md  UNCAPTURED_PAYMENTS_TESTING.md  VERSIONING.md
docs/instructions/: driver_button.md
scripts/: check_sub_212169.py  generate_changelog.py  pre-commit  remove_pending_adjustment.py  validate_commits.py
tuktuk_management/: Driver.js  boot.py  fix_substitute_driver_days_worked.py  hooks.py  modules.py  modules.txt  patches.txt  remove_workspace_fixture.py  test_tuktuk_driver_role.py  update_transaction_listview.py  update_workspace_icon.py
tuktuk_management/api/: .tuktuk.py  balance_reconciliation.py  battery_utils.py  csv_integration.py  csv_telemetry.py  device_mapping.py  driver_auth.py  payouts.py  roster.py  sendpay.py  sms_notifications.py  sms_notifications_backup.py  sunny_id_payment_handler.py  telematics.py  test_balance_fixes.py  tuktuk.py  user_management.py  weekly_report.py
tuktuk_management/config/: desktop.py  tuktuk_management.py
tuktuk_management/documentation/: BALANCE_FIX_SUMMARY.md  BALANCE_QUICK_REFERENCE.md  DEPLOYMENT_REPORT.md  SMS_BROADCAST_GUIDE.md  SMS_TESTING_GUIDE.md  TEXTSMS_INTEGRATION_GUIDE.md  UNCAPTURED_PAYMENTS_QUICKSTART.md
tuktuk_management/fixtures/: dashboard_chart.json  workspace.json
tuktuk_management/overrides/: tuktuk_settings.py
tuktuk_management/patches/: add_b2c_fields.py  add_location_fields.py  add_sunny_id_field.py  add_user_account_field.py  create_tuktuk_driver_role.py  create_workspace.py  fix_list_view_permissions.py  fix_permissions_final.py  fix_settings_access.py  fix_tuktuk_driver_permissions.py  remove_tuktuk_id_format.py  update_mpesa_account_validation.py
tuktuk_management/setup/: add_roster_fields.py  install.py
(+120 files in other folders)
