[project]
name = "tuktuk_management"
authors = [
    { name = "Yuda Media", email = "yuda@graphicshop.co.ke"}
]
description = "Sunny TukTuk Management System - A comprehensive ERPNext 15 application for managing electric tuktuks, drivers, payments, and operations in Diani Beach, Kenya."
requires-python = ">=3.10"
readme = "README.md"
changelog = "CHANGELOG.md"
license = { text = "MIT" }
keywords = ["erpnext", "fleet-management", "mpesa", "tuktuk", "kenya", "transportation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Scheduling",
]
version = "0.1.4"
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[project.urls]
Homepage = "https://github.com/yudamedia/tuktuk-management"
Documentation = "https://github.com/yudamedia/tuktuk-management#readme"
Repository = "https://github.com/yudamedia/tuktuk-management.git"
Issues = "https://github.com/yudamedia/tuktuk-management/issues"
Changelog = "https://github.com/yudamedia/tuktuk-management/blob/main/CHANGELOG.md"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

# Changelog generation configuration
[tool.conventional-changelog]
preset = "angular"
release-count = 0
output-unreleased = true
lerna-package = "tuktuk_management"

# Version management
[tool.bumpversion]
current_version = "0.1.4"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "version = '{current_version}'"
replace = "version = '{new_version}'"

[tool.bumpversion.file:pyproject.toml]
search = 'version = "0.1.4"'
replace = 'version = "{new_version}"'

[tool.bumpversion.file:setup.py]
search = "version='0.1.4'"
replace = "version='{new_version}'"